<resources>
    <string name="app_name">AndroidTestProject</string>
    <string name="movie_description">Held captive in an enchanted castle where clocks and candlesticks come to life, a brave young woman clashes with a beastly but good-</string>
    <string name="title_search">Google Play</string>

    <!-- TabLayout - Items del Menu Principal -->
    <string name="item_home">HOME</string>
    <string name="item_games">GAMES</string>
    <string name="item_movies">MOVIES</string>
    <string name="item_books">BOOKS</string>
    <string name="item_music">MUSIC</string>
    <string name="item_news_stand">NEWSSTAND</string>
    <string name="text_title_example">TextInputLayout</string>
    <string name="text_description_example">Se van a explorar todas las caracteristicas del componente TextInputLayout</string>
    <string name="title_examples_list">Ejemplos</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="mpandroidchart_activity_title">Gráficos</string>

    <string name="linechart_dialog_title">INFORMACIÓN DEL GRÁFICO</string>
    <string name="linechart_dialog_message">Gráfico de lineas y puntos</string>
    <string name="linechart_legend">Notas de</string>

    <string name="child_name_text">Edwin Yovany</string>
    <string name="child_id_text">10873450956</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="child_performance_title">Rendimiento de la Actividad</string>
    <string name="webpage_button_text">ABRIR PÁGINA WEB</string>
    <string name="call_button_text">REALIZAR UNA LLAMADA</string>
    <string name="Maps_button_text">ABRIR GOOGLE MAPS</string>
    <string name="takephoto_button_text">TOMAR UNA FOTO</string>
    <string name="sendemail_button_text">ENVIAR CORREO</string>

    <string name="chart_line_item_title">LINEAS</string>
    <string name="chartbar_item_title">BARRAS</string>
    <string name="chart_pie_item_title">CIRCULAR</string>

    <string name="test_legend">EXAMENES</string>
    <string name="work_legend">TRABAJOS</string>
    <string name="exposition_legend">EXPOSICIONES</string>
    <string name="barchart_stacked_legend">Gráfico de barras apilado</string>
    <string name="performance_legend">DESEMPEÑO ESTUDIANTIL</string>
    <string name="chart_message_nodata">Los datos no se han cargado</string>
    <string name="websearch_button_text">BUSCAR EN LA WEB</string>
    <string name="dial_button_text">MARCAR UN NUMERO TELEFÓNICO</string>
    <string name="Street_button_text">ABRIR GOOGLE STREETVIEW</string>
    <string name="barchart_new_data">Nuevos Valores</string>
    <string name="chart_other_item_title">OTROS</string>
    <string name="skill_legend">HABILIDADES</string>
    <string name="first_name_hint">Nombres</string>
</resources>
