<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ComponentIntentActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/general_padding_8"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btnWebPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webpage_button_text"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/btnCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_button_text"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/btnMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Maps_button_text"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takephoto_button_text"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendemail_button_text"
            android:theme="@style/RaisedButtonDark" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>